--- a/app/views/surveys/_edit_edificio_vivienda.html.erb
+++ b/app/views/surveys/_edit_edificio_vivienda.html.erb
@@ -1,16 +1,18 @@
+
+<!-- EDIFICIO -->
 <h3><%=  t(:titulo, :scope => [:encuesta, :edificio]) %></h3>
-
-
 
 <p class="info"><%=  t(:periodo, :scope => [:encuesta, :edificio]) %></p>
 <% Survey::EDIFICIO_PERIODO.each do |periodo| %>
   <p><%= f.radio_answer :edificio_periodo, periodo, :edificio %></p>
 <% end %>
 
-<p class="info"><%=  t(:tipo, :scope => [:encuesta, :edificio]) %></p>
-<% Survey::VIVIENDA_TIPO_EDIFICIO.each do |tipo| %>
-  <p><%= f.radio_answer :vivienda_tipo_edificio, tipo, :vivienda %></p>
-<% end %>
+<div id="vivienda_tipo_edificio">
+  <p class="info"><%=  t(:tipo, :scope => [:encuesta, :edificio]) %></p>
+  <% Survey::VIVIENDA_TIPO_EDIFICIO.each do |tipo| %>
+    <p><%= f.radio_answer :vivienda_tipo_edificio, tipo, :vivienda %></p>
+  <% end %>
+</div>
 
 <p class="info"><%=  t(:plantas, :scope => [:encuesta, :edificio]) %></p>
 <p><label>&nbsp;</label><%= f.text_field :vivienda_num_plantas %></p>
@@ -20,11 +22,15 @@
   <p><%= f.radio_answer :edificio_tejado, option, :edificio %></p>
 <% end -%>
 
+
+<!-- VIVIENDA -->
 <h3><%=  t(:titulo, :scope => [:encuesta, :vivienda]) %></h3>
-<p class="info"><%=  t(:planta, :scope => [:encuesta, :vivienda]) %></p>
-<% Survey::VIVIENDA_PLANTA.each do |planta| %>
-  <p><%= f.radio_answer :vivienda_planta, planta, :vivienda %></p>
-<%  end -%>
+<div id="vivienda_planta">
+  <p class="info"><%=  t(:planta, :scope => [:encuesta, :vivienda]) %></p>
+  <% Survey::VIVIENDA_PLANTA.each do |planta| %>
+    <p><%= f.radio_answer :vivienda_planta, planta, :vivienda %></p>
+  <%  end -%>
+</div>
 
 <p class="info"><%=  t(:superficie, :scope => [:encuesta, :vivienda]) %></p>
 <p><label>&nbsp;</label><%= f.text_field :vivienda_superficie %><span>m<sup>2</sup></span></p>
@@ -66,7 +72,10 @@
       return $("#vivienda_reformas input:checked").length == 0;
     });
 
+    $.rule("bloque", $.enable("#vivienda_planta"), $.checked("#survey_vivienda_tipo_edificio_bloque"))
+
     $("#vivienda_reformas input").fires("reformas");
+    $("#vivienda_tipo_edificio").fires("bloque");
   });
 </script>
 
