--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -15,7 +15,7 @@
           list.empty();
           $.each(data, function(index) {
             var m = data[index];
-            list.append('<option value="' + m.id + '">' + m.name +  '</option>');
+            list.append('<' + 'option value="' + m.id + '">' + m.name +  '</' + 'option>');
           });
           spinner.hide();
         });
