--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -40,7 +40,7 @@
 
     <p class="info"><%= t(:subtitulo, :scope => [:encuesta]) %></p>
     <p class="save">
-      <%= f.submit 'Guardar' %> Pulse "Guardar" cuando complete el cuestionario.
+      <%= f.submit 'Guardar', :id => 'survey_submit_pre' %> Pulse "Guardar" cuando complete el cuestionario.
     </p>
 
     <h3><%=  t(:titulo, :scope => [:encuesta, :ciudad]) %></h3>
