--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -22,7 +22,7 @@
       });
 
       $("#javascript").hide();
-      $("#encuesta").slideDown(2000);
+      $("#encuesta").show();
     });
   </script>
 <% end %>
