--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -5,13 +5,13 @@
     <title>E3E - <%= yield(:title) || 'Prototipo' %></title>
     <!-- link rel="icon" href="images/e3e.ico" type="image/x-icon" / -->
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.6.0/build/reset/reset-min.css" />
-    <%= stylesheet_link_tag 'wecex.css' %>
+    <%= stylesheet_link_tag 'e3e' %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
     <%= javascript_include_tag 'jquery.validator.js'  %>
     <%= yield :header %>
   </head>
   <body>
-    <div class="top <%= @controller.class %>" ></div>
+    <div class="top <%= @controller.class.to_s.downcase %>" ></div>
     <div id="page">
       <div id="head">
         <div id="logo">
