--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -72,6 +72,9 @@ p {margin: 0.4em 0;}
 form input[type=text], form input[type=password] {border: 1px solid #efefef; padding: 2px;}
 form input[type=radio] {margin-right: 0.3em; display: block; float: left; margin-top: 0.15em;}
 form p {width: 100%; overflow: hidden; margin-bottom: 0.2em;}
+form p span.fake_field {
+    display: block; margin-left: 9em; width: 15em; color: gray;
+    border: 1px solid white; padding: 2px; }
 form span {margin-left: 0.2em;}
 form span.fieldWithErrors {float: left; margin-left: 0; border: 2px solid #c00; }
 form p.info {margin: 1em 0 0.5em 8em; color: #4F4F4F;}
@@ -80,7 +83,7 @@ form p.save {background-color: #efefef; padding: 0.5em 2em; margin-left: 6em; wi
 form label {float: left; display: block; width: 6em; text-align: right; padding-top: 0.2em;
     margin-right: 0.5em; margin-left: 2.5em; color: gray;}
 form p.error_message {color: #c00; margin-left: 9em; margin-bottom: 1em;}
-form p.error {background-color: #FFAFAF; padding-top: 5px;}
+form p.error {background-color: #FFAFAF; padding-top: 5px; text-align: center;}
 
 form .disabled {-moz-opacity: 0.5;}
 form .disabled span {color: gray;}
