page caching in about controller

--- a/app/views/about/what.html.erb
+++ b/app/views/about/what.html.erb
@@ -1,5 +1,5 @@
 <%= title t(:title) %>
 
 <div class="help">
-  <p>Esto es sólo un prototipo: aquí falta texto, imágenes, vídeos, enlaces o cualquier documentación que se quiera aportar</p>
+  <p>Falta por escribir este texto</p>
 </div>
