--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -62,7 +62,8 @@ p {margin: 0.4em 0;}
 .session a {font-variant: small-caps; padding: 0.5em; }
 .content {padding: 1em 2em;}
 
-.flash_notice {background-color: #7F7F7F; color: white; width: 100%; margin: 0 auto; padding: 2px; text-align: center;
+.flash_notice {background-color: #7F7F7F; font-size: 120%;
+    color: white; width: 100%; margin: 0 auto; padding: 5px 2px; text-align: center;
     -moz-border-radius: 0.2em; -webkit-border-radius: 0.2em; }
 
 .dialog {width: 70%; margin: 3em auto; border: 0.5em solid #efefef; padding: 1em;}
@@ -110,8 +111,8 @@ table.dataset label {color: black; margin-right: 1em; width: 10em;}
 table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 
 .chartfields {width: 100%; overflow: hidden; margin: -10px 0 10px 40px;}
-.chartfields div.inline-data { font-size: 80%; border: 1px solid #efefef; padding: 1px;
-    width: 29px; float: left; margin-left: 4.5px; margin-right: 3px;}
+.chartfields input { font-size: 80%; border: 1px solid #efefef; padding: 1px;
+    width: 27px; float: left; margin-left: 4.5px; margin-right: 3px;}
 
 /* USERS */
 table.users { margin: 1em; }
