--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -11,42 +11,35 @@
     <%= yield :header %>
   </head>
   <body>
-    <div class="top <%= @controller.class.to_s.downcase %>" ></div>
+    <div id="top" class="<%= @controller.class.to_s.downcase %>">
+      <div id="header">
+        <div class="session">
+          <% if signed_in? %>
+            Hola <%= current_user.username %>
+            <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
+          <% else -%>
+            <%= link_to 'Entrar', new_user_sessions_path %>
+            <%= link_to 'Darse de alta', new_user_path %>
+          <% end -%>
+          <% if current_admin %>
+            <%= link_to t(:admin_zone), current_admin %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
     <div id="page">
-      <div id="head">
-        <div id="logo">
-          <h1><%= link_to 'E3E', root_path %></h1>
-          <p>Mejorar el consumo energético</p>
-        </div>
-
-        <div id="navigation">
-          <div class="sections">
-            <% if signed_in? %>
-              <%= section t(:survey), survey_path, :SurveysController %>
-              <%= section t(:gas), gas_path %>
-              <%= section t(:elec), electricidad_path %>
-              <%= section t(:report), report_path, :ReportsController, :class => 'report' %>
-            <% else -%>
-              <%= section t(:what), what_path %>
-              <%= section t(:who), who_path %>
-              <%= section t(:mission), mission_path %>
-            <% end %>
-          </div>
+      <div id="navigation">
+        <div class="sections">
+          <%= section t(:about), root_path, :AboutController %>
+          <%= section t(:survey), survey_path, :SurveysController %>
+          <%= section t(:gas), gas_path %>
+          <%= section t(:elec), electricidad_path %>
+          <%= section t(:report), report_path, :ReportsController, :class => 'report' %>
         </div>
       </div>
 
-      <div class="session">
-        <% if signed_in? %>
-          Hola <%= current_user.username %>
-          <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
-        <% else -%>
-          <%= link_to 'Entrar', new_user_sessions_path %>
-          <%= link_to 'Darse de alta', new_user_path %>
-        <% end -%>
-        <% if current_admin %>
-          <%= link_to t(:admin_zone), current_admin %>
-        <% end %>
-      </div>
+
 
 
       <% if flash[:notice] %>
