--- a/public/stylesheets/e3e.css
+++ b/public/stylesheets/e3e.css
@@ -58,9 +58,24 @@ p { margin: 0.4em 0; }
   -moz-border-radius: 0.3em;
   -webkit-border-radius: 0.3em;
 }
-.top {
+#top {
   width: 100%;
-  height: 0.7em;
+  overflow: hidden;
+  height: 40px;
+}
+#header {
+  width: 900px;
+  margin: auto;
+}
+.session { float: right; }
+.session a {
+  font-variant: small-caps;
+  padding: 0.5em;
+}
+#logo {
+  float: left;
+  margin-right: 2em;
+  margin-bottom: 1em;
 }
 #page {
   width: 900px;
@@ -79,11 +94,6 @@ p { margin: 0.4em 0; }
   margin-top: 2em;
   border-top: 1px solid #9f9f9f;
 }
-#logo {
-  float: left;
-  margin-right: 2em;
-  margin-bottom: 1em;
-}
 #head {
   width: 100%;
   overflow: hidden;
@@ -98,38 +108,36 @@ p { margin: 0.4em 0; }
   font-variant: small-caps;
   margin-top: -1em;
 }
-#navigation { margin-top: 1em; }
+#navigation {
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 2em;
+}
 #navigation .sections { float: left; }
 #navigation a {
-  padding: 2em 0.5em 1.5em 0.5em;
+  display: block;
+  float: left;
+  margin-right: 0.5em;
+  padding: 0.5em 1em 0.5em 1em;
   font-variant: small-caps;
   -moz-border-radius: 0 0 0.5em 0.5em;
+  background-color: #efefef;
   -webkit-border-bottom-left-radius: 0.5em;
   -webkit-border-bottom-right-radius: 0.5em;
 }
 #navigation span {
-  padding: 2em 0.5em 1.5em 0.5em;
+  display: block;
+  float: left;
+  margin-right: 0.5em;
+  padding: 0.5em 1em 0.5em 1em;
   font-variant: small-caps;
   -moz-border-radius: 0 0 0.5em 0.5em;
+  background-color: #efefef;
   -webkit-border-bottom-left-radius: 0.5em;
   -webkit-border-bottom-right-radius: 0.5em;
 }
 #navigation span { color: white; }
-#navigation a:hover { background-color: #efefef; }
-.session {
-  width: 100%;
-  overflow: hidden;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
-  margin-bottom: 1em;
-  color: gray;
-  font-size: 90%;
-  padding: 0.2em 0;
-}
-.session a {
-  font-variant: small-caps;
-  padding: 0.5em;
-}
+#navigation a:hover { background-color: #dfffcf; }
 .content { padding: 1em 2em; }
 .flash_notice {
   background-color: #7f7f7f;
