--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -1,4 +1,6 @@
 
+@oscuro: rgba(0,0,0,0.4);
+
 html {
     font-size: 80%;
     background-color: #efefef;
@@ -6,11 +8,17 @@ html {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.round {
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+}
 .tab-borders {
-    
+    -moz-border-radius:  0 0 0.5em 0.5em;
+    -webkit-border-bottom-left-radius: 0.5em; -webkit-border-bottom-right-radius: 0.5em;
 }
 
-.aboutcontroller {background-color: #A5C941;}
+
+.aboutcontroller {background-color: #DF0DC7;}
 .electricidadcontroller {background-color: #2DAEBF;}
 .gascontroller {background-color: #FC9200;}
 .surveyscontroller {background-color: #A9014B;}
@@ -29,15 +37,16 @@ h4 {font-size: 100%; border-bottom: 1px solid #9F9F9F; margin-top: 2em ; margin-
 li {list-style-type: disc; margin-left: 2em;}
 
 a {color: gray; text-decoration: none;}
-a:hover {color: black;}
+a:hover {color: black; text-decoration: undeline;}
 p {margin: 0.4em 0;}
 .help {margin: 1em 0; background-color: #efefef; padding: 1em;
     -moz-border-radius: 0.3em; -webkit-border-radius: 0.3em;}
 
 #top {width: 100%; overflow: hidden; height: 40px;}
 #header {width: 900px; margin: auto;}
-.session {float: right;}
-.session a {font-variant: small-caps; padding: 0.5em; }
+.session {float: right; margin-top: 1em; margin-right: -1em;}
+.session a {font-variant: small-caps; padding: 0.5em; color: white;
+    background-color: @oscuro; .round;}
 #logo {float: left; margin-right: 2em; margin-bottom: 1em;}
 
 #page {width: 900px; margin: 0 auto 2em auto; background-color: white; padding: 0 1em;
@@ -57,8 +66,8 @@ p {margin: 0.4em 0;}
 #navigation .sections {float: left; }
 #navigation  a, #navigation span {display: block; float: left; margin-right: 0.5em;
     padding: 0.5em 1em 0.5em 1em; font-variant: small-caps;
-    -moz-border-radius: 0 0 0.5em 0.5em; background-color: #efefef;
-     -webkit-border-bottom-left-radius: 0.5em; -webkit-border-bottom-right-radius: 0.5em;}
+ .tab-borders; }
+#navigation a {background-color: #efefef;}
 #navigation span {color: white;}
 #navigation a:hover {background-color: #DFFFCF;}
 
