--- a/app/views/about/what.html.erb
+++ b/app/views/about/what.html.erb
@@ -1,5 +1,28 @@
-<%= title t(:title) %>
+<h1>Qué es E3E</h1>
 
-<div class="help">
-  <p>Falta por escribir este texto</p>
+<p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit mollis lectus ut vulputate. Sed et velit in lorem fermentum porta et nec arcu. Fusce aliquet orci urna. Nullam at quam turpis, eu iaculis magna. Donec ac ligula orci. Fusce fermentum sagittis libero sed dignissim. Quisque eros nisi, hendrerit non posuere elementum, euismod sed nibh. Etiam sit amet aliquam mauris. Nam ac semper mi. In in metus lorem.</p>
+<div class="col3">
+  <h2>Paso 1:</h2>
+  <h1>Encuesta</h1>
+  <img src="/images/encuesta.png">
+    <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
+<div class="col3">
+  <h2>Paso 2:</h2>
+  <h1>Consumo</h1>
+  <img src="/images/consumo.png">
+    <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
+</div>
+<div class="col3">
+  <h2>Paso 3:</h2>
+  <h1>Resultados</h1>
+  <img src="/images/empty.png">
+    <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
+</div>
+
+
+<p class="about">Suspendisse vitae ligula leo. Fusce egestas, odio sit amet fermentum blandit, mauris erat malesuada magna, ac molestie mi sem sit amet nisl. Mauris malesuada ligula libero. Suspendisse ipsum nunc, lacinia sit amet lacinia ac, rutrum porta mi. Pellentesque auctor rhoncus vehicula. Duis dolor tellus, imperdiet in consequat sit amet, volutpat sed nisl. Nunc aliquam convallis ipsum, ultricies fermentum tortor pellentesque sed. Duis eleifend tempor nunc vitae ultricies. Nam in urna massa. Morbi condimentum pulvinar nisl id porttitor. Nam porta tempor elit nec eleifend. Donec tempor neque sit amet nisi blandit convallis. Vestibulum dictum accumsan nunc sit amet tincidunt. Aenean faucibus gravida tortor sit amet ultrices.</p>
+<br/>
+<h2>Quiénes somos</h2>
+
+<p class="about">Aliquam vehicula pulvinar elit et volutpat. Nunc ornare, mi vitae euismod egestas, felis tellus ornare quam, eu suscipit eros nisl ut dui. Morbi convallis, nunc eget hendrerit auctor, sem urna tincidunt ipsum, vitae vestibulum turpis elit et orci. Cras elementum, turpis at posuere vulputate, enim eros volutpat ante, sed ornare urna massa euismod sem. Aliquam elit arcu, mollis ac posuere vitae, porttitor vel libero. Vestibulum sit amet diam ut risus suscipit convallis id a velit. Donec mattis, felis non luctus sodales, nunc ligula rhoncus nisl, ut imperdiet lorem mi ut justo. Vivamus ac faucibus lorem. Mauris tempor lacus in erat cursus commodo. Integer vel arcu velit, quis tristique velit. Duis ac adipiscing nunc. Mauris pulvinar nunc eu neque sollicitudin aliquam.</p>
