--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -4,32 +4,31 @@
   <head>
     <title>E3E - <%= yield(:title) || 'Prototipo' %></title>
     <!-- link rel="icon" href="images/e3e.ico" type="image/x-icon" / -->
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.6.0/build/reset/reset-min.css" />
     <%= stylesheet_link_tag 'e3e' %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
     <%= javascript_include_tag 'jquery.validator.js'  %>
     <%= yield :header %>
   </head>
   <body>
-    <div id="top" class="<%= @controller.class.to_s.downcase %>">
-      <div id="header">
-        <div class="session">
-          <% if signed_in? %>
-            Hola <%= current_user.username %>
-            <%= link_to t('users.edit'), edit_user_path(current_user) %>
-            <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
-          <% else -%>
-            <%= link_to 'Entrar', new_user_sessions_path %>
-            <%= link_to 'Darse de alta', new_user_path %>
-          <% end -%>
-          <% if current_admin %>
-            <%= link_to t(:admin_zone), current_admin %>
-          <% end %>
+    <div id="top">
+      <div id="bar" class="<%= @controller.class.to_s.downcase %>">
+        <div id="header">
+          <h1>E3E</h1>
+          <div class="session">
+            <% if signed_in? %>
+              Hola <%= current_user.username %>
+              <%= link_to t('users.edit'), edit_user_path(current_user) %>
+              <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
+            <% else -%>
+              <%= link_to 'Entrar', new_user_sessions_path %>
+              <%= link_to 'Darse de alta', new_user_path %>
+            <% end -%>
+            <% if current_admin %>
+              <%= link_to t(:admin_zone), current_admin %>
+            <% end %>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div id="page">
       <div id="navigation">
         <div class="sections">
           <%= section t(:about), root_path, :AboutController %>
@@ -39,10 +38,9 @@
           <%= section t(:report), report_path, :ReportsController, :class => 'report' %>
         </div>
       </div>
+    </div>
 
-
-
-
+    <div id="page">
       <% if flash[:notice] %>
         <div class="flash_notice"><%= flash[:notice] %></div>
       <% end %>
@@ -50,9 +48,7 @@
         <%= yield %>
       </div>
       <div class="bottom">
-        <%= link_to t(:what), what_path %> |
-        <%= link_to t(:who), who_path %> |
-        <%= link_to t(:mission), mission_path %> |
+        <%= link_to 'Hecho a mano por c a l c', 'http://calclab.com' %>
       </div>
     </div>
   </body>
