--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -1,9 +1,18 @@
+/*
+Copyright (c) 2008, Yahoo! Inc. All rights reserved.
+Code licensed under the BSD License:
+http://developer.yahoo.net/yui/license.txt
+version: 2.6.0
+*/
+html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}del,ins{text-decoration:none;}
 
-@oscuro: rgba(0,0,0,0.4);
+
+@medio: rgba(0,0,0,0.05);
+@oscuro: rgba(0,0,0,0.2);
 
 html {
     font-size: 80%;
-    background-color: #efefef;
+    background-color: #FFFFDF;
     color: black;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
@@ -18,11 +27,11 @@ html {
 }
 
 
-.aboutcontroller {background-color: #DF0DC7;}
-.electricidadcontroller {background-color: #2DAEBF;}
-.gascontroller {background-color: #FC9200;}
+.aboutcontroller {background-color: #A726CF;}
+.electricidadcontroller {background-color: #2BA2AF;}
+.gascontroller {background-color: #EF8C00;}
 .surveyscontroller {background-color: #A9014B;}
-.reportscontroller {background-color: #0CCF5D;}
+.reportscontroller {background-color: #0AAF4F;}
 .usersessionscontroller {background-color: #0c0; }
 .adminsessionscontroller {background-color: #000;}
 .userscontroller {background-color: #0c0; }
@@ -30,26 +39,30 @@ html {
 .container {width: 100%; overflow: hidden;}
 
 h1, h2, h3 {color: #333333;}
-h1 {font-size: 250%;}
+h1 {font-size: 220%; font-weight: bold; letter-spacing: -0.08em;}
 h2 {font-size: 150%;}
 h3 {font-size: 125%; border-bottom: 1px solid #9F9F9F; margin: 2em 0 1em 0; padding-left: 6.5em;}
 h4 {font-size: 100%; border-bottom: 1px solid #9F9F9F; margin-top: 2em ; margin-left: 7em; padding-left: 1em;  }
 li {list-style-type: disc; margin-left: 2em;}
 
+
 a {color: gray; text-decoration: none;}
 a:hover {color: black; text-decoration: undeline;}
 p {margin: 0.4em 0;}
-.help {margin: 1em 0; background-color: #efefef; padding: 1em;
+.help {margin: 1em 0; background-color: @medio; padding: 1em;
     -moz-border-radius: 0.3em; -webkit-border-radius: 0.3em;}
 
-#top {width: 100%; overflow: hidden; height: 40px;}
-#header {width: 900px; margin: auto;}
-.session {float: right; margin-top: 1em; margin-right: -1em;}
+#top {width: 100%; position: fixed; left: 0; top: 0;}
+#bar {width: 100%; overflow: hidden; height: 64px;}
+#header {width: 900px; margin: auto; color: white; }
+#header h1 {float: left; width: 89px; height: 35px; opacity: 0.95; margin-top: 15px;
+    text-indent: -1000px; background-image:url(../images/e3e.gif); background-repeat: none;}
+.session {float: right; margin-top: 25px; margin-right: -1em;}
 .session a {font-variant: small-caps; padding: 0.5em; color: white;
     background-color: @oscuro; .round;}
 #logo {float: left; margin-right: 2em; margin-bottom: 1em;}
 
-#page {width: 900px; margin: 0 auto 2em auto; background-color: white; padding: 0 1em;
+#page {width: 900px; margin: 0em auto 5em auto; background-color: #FFFFEF; padding: 12em 1em 0 1em;
     -moz-border-radius: 0 0 1em 1em;
     -webkit-border-bottom-left-radius: 1em; -webkit-border-bottom-right-radius: 1em;}
 
@@ -62,14 +75,14 @@ p {margin: 0.4em 0;}
 #head h1 a {color: #222222;}
 #head p {font-variant: small-caps; margin-top: -1em; }
 
-#navigation {width: 100%; overflow: hidden; margin-bottom: 2em;}
+#navigation {width: 900px; margin: 0 auto; overflow: hidden; background-color: #FFFFEF; padding: 0 1em 1em 1em;}
 #navigation .sections {float: left; }
 #navigation  a, #navigation span {display: block; float: left; margin-right: 0.5em;
-    padding: 0.5em 1em 0.5em 1em; font-variant: small-caps;
- .tab-borders; }
-#navigation a {background-color: #efefef;}
+    padding: 0.5em 1em 0.5em 1em; font-variant: small-caps; font-size: 110%;
+    .tab-borders; }
+#navigation a {background-color: @medio;}
 #navigation span {color: white;}
-#navigation a:hover {background-color: #DFFFCF;}
+#navigation a:hover {background-color: @oscuro;}
 
 .content {padding: 1em 2em;}
 
@@ -77,11 +90,19 @@ p {margin: 0.4em 0;}
     color: white; width: 100%; margin: 0 auto; padding: 5px 2px; text-align: center;
     -moz-border-radius: 0.2em; -webkit-border-radius: 0.2em; }
 
-.dialog {width: 70%; margin: 3em auto; border: 0.5em solid #efefef; padding: 1em;}
+.col3 {float: left; width: 30%; margin: 2em 3% 2em 0;}
+.col3 h2 {margin-left: 8px;}
+.col3 h1 {margin-left: 8px; font-size: 180%; font-style: normal;}
+.col3 img { background-color: @medio; width: 250px;height: 150px; margin-bottom: 1em;
+    border: 8px solid @medio;  .round; }
+.col3 p {margin-left: 8px;}
+p.about {font-size: 120%; font-style: italic; line-height: 1.5em;}
+
+.dialog {width: 70%; margin: 3em auto; border: 0.5em solid @medio; padding: 1em;}
 .dialog h2 {margin-left: 5.3em; margin-bottom: 0.2em;}
 .dialog ul {margin: 1em 0 0.5em 8em;}
 .dialog ul li {list-style-type: none; margin-left: 0; margin-top: 0.2em;}
-form input[type=text], form input[type=password] {border: 1px solid #efefef; padding: 2px;}
+form input[type=text], form input[type=password] {border: 1px solid @medio; padding: 2px;}
 form input[type=radio] {margin-right: 0.3em; display: block; float: left; margin-top: 0.15em;}
 form p {width: 100%; overflow: hidden; margin-bottom: 0.2em;}
 form p span.fake_field {
@@ -90,7 +111,7 @@ form p span.fake_field {
 form span {margin-left: 0.2em;}
 form span.fieldWithErrors {float: left; margin-left: 0; border: 2px solid #c00; }
 form p.info {margin: 1em 0 0.5em 8em; color: #4F4F4F;}
-form p.save {background-color: #efefef; padding: 0.5em 2em; margin-left: 6em; width: auto;
+form p.save {background-color: @medio; padding: 0.5em 2em; margin: 1em 6em 1em 6em; width: auto;
     -moz-border-radius: 1em; -webkit-border-radius: 1em;}
 form label {float: left; display: block; width: 6em; text-align: right; padding-top: 0.2em;
     margin-right: 0.5em; margin-left: 2.5em; color: gray;}
@@ -108,12 +129,12 @@ form .disabled span {color: gray;}
 #encuesta textarea {width: 40em; height: 10em;}
 
 form table {margin: 1em 0 2em 8em;}
-form tr.even {background-color: #efefef;}
+form tr.even {background-color: @medio;}
 form table td {padding: 0.2em 1em; text-align: center;}
 form table td.name {text-align: right; padding-right: 0.5em; width: 12em;}
 
 /* INVOICES */
-#chart_panel {margin: 1em 0; border: 1em solid #efefef;}
+#chart_panel {margin: 1em 0; border: 1em solid @medio; .round;}
 #chart {width: 100%; margin: 0; border: 0; padding: 0;}
 table.dataset {margin-left: auto; margin-right: auto;}
 table.dataset td {padding-left: 0; padding-right: 0.2em;}
@@ -122,7 +143,7 @@ table.dataset label {color: black; margin-right: 1em; width: 10em;}
 table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 
 .chartfields {width: 100%; overflow: hidden; margin: -10px 0 10px 40px;}
-.chartfields input { font-size: 80%; border: 1px solid #efefef; padding: 1px;
+.chartfields input { font-size: 80%; border: 1px solid @medio; padding: 1px;
     width: 27px; float: left; margin-left: 4.5px; margin-right: 3px;}
 
 /* USERS */
